third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_non_signer.exp

Diagnostics:
error: invalid call of `move_to`: expected `signer` but found `address` for argument 1
  ┌─ tests/checking/typing/v1-signer/move_to_non_signer.move:4:17
  │
4 │         move_to(s, R { f: false })
  │                 ^

error: invalid call of `move_to`: expected `&signer` but found `address` for argument 1
   ┌─ tests/checking/typing/v1-signer/move_to_non_signer.move:12:17
   │
12 │         move_to(s, R { f: false })
   │                 ^
